feature: index DomainEvents in an entity specific topic (#21)
* feature: index DomainEvents in an entity specific topic

this is cross aggregate

* made Account and Wallet indexed

added test to test indexer topic

* add a getIndexKey method to the AggregateState interface

to allow for more fine grained index key selection. defaults to the aggregateId

* added a test to ensure that error events are not indexed